--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,6 @@ sqlmodel==0.0.22
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 httpx==0.27.0
+python-multipart==0.0.9
 
 psycopg2-binary==2.9.10
