--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,10 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
+          ENABLE_STATIC_EXPORT: 'true'
+
+      - name: Copy .nojekyll to out
+        run: cp .nojekyll out/.nojekyll || echo "" > out/.nojekyll
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
