--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,13 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
+                    ENABLE_STATIC_EXPORT: 'true'
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
+              - name: Create .nojekyll
+                      run: touch ./out/.nojekyll
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
