--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.23",
+    "form-data": "^4.0.5",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "next": "^16.1.1",
